--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       </div>
       <!-- Submit button -->
       <div class="mb-5 text-center" >
-        <button type="submit" value="Submit" class="btn">Submit</button>
+        <button type="submit"  class="btn">Submit</button>
       </div>
       
     </form>
