--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
     </div>
       
-      <form action="/submit" method="post" class="max-w-sm mx-auto ">
+      <form  class="max-w-sm mx-auto ">
   
         <!-- Text input for website -->
       <div class="mb-5">
